# automated_customer_journey_and_pixel_tracking_agent

./: .gitignore  README.md  pyproject.toml
src/automated_customer_journey_and_pixel_tracking_agent/: crew.py  main.py
src/automated_customer_journey_and_pixel_tracking_agent/config/: agents.yaml  tasks.yaml
