[project]
name = "automated_customer_journey_and_pixel_tracking_agent"
version = "0.1.0"
description = "automated_customer_journey_and_pixel_tracking_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
automated_customer_journey_and_pixel_tracking_agent = "automated_customer_journey_and_pixel_tracking_agent.main:run"
run_crew = "automated_customer_journey_and_pixel_tracking_agent.main:run"
train = "automated_customer_journey_and_pixel_tracking_agent.main:train"
replay = "automated_customer_journey_and_pixel_tracking_agent.main:replay"
test = "automated_customer_journey_and_pixel_tracking_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
